omni/tests/goldens/types/undefined_ident_18.err
tests/goldens/types/undefined_ident_18.omni:1:20: error: undefined identifier "missing18"
  let result18:int = missing18
                     ^~~ hint: declare the name before using it
